Fix box wrapping on wide screens

--- a/style.css
+++ b/style.css
@@ -660,6 +660,11 @@
             {
                 padding: 30px;
             }
+
+            main > section:not(.band)
+            {
+                padding: 0px;
+            }
             
             #sectionTitle
             {
@@ -810,7 +815,6 @@
                 {
                     background: url('/images/snowdonia.jpg') center;
                     background-size: cover;
-                    padding: 20px;
                 }
 
                 #russia
